; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/gpio/extr_gpio-mcs814x.c_mcs814x_gpio_get.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/gpio/extr_gpio-mcs814x.c_mcs814x_gpio_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.mcs814x_gpio_chip = type { i64 }

@GPIO_PIN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @mcs814x_gpio_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcs814x_gpio_get(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mcs814x_gpio_chip*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %7 = call %struct.mcs814x_gpio_chip* @to_mcs814x_gpio_chip(%struct.gpio_chip* %6)
  store %struct.mcs814x_gpio_chip* %7, %struct.mcs814x_gpio_chip** %5, align 8
  %8 = load %struct.mcs814x_gpio_chip*, %struct.mcs814x_gpio_chip** %5, align 8
  %9 = getelementptr inbounds %struct.mcs814x_gpio_chip, %struct.mcs814x_gpio_chip* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @GPIO_PIN, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @readl_relaxed(i64 %12)
  %14 = load i32, i32* %4, align 4
  %15 = shl i32 1, %14
  %16 = and i32 %13, %15
  ret i32 %16
}

declare dso_local %struct.mcs814x_gpio_chip* @to_mcs814x_gpio_chip(%struct.gpio_chip*) #1

declare dso_local i32 @readl_relaxed(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
